Add header and its styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Awesome books</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="#"><h1>Awesome Books</h1></a>
+        <ul class="menuList">
+          <li><a id="goList" href="#">List</a></li>
+          <li><a id="goForm" href="#">Add new</a></li>
+          <li><a id="goCont" href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="date">March 19, 2021 9:25:32 am</div>
+    </header>
+
     <script src="index.js"></script>
   </body>
 </html>
