--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       <div class="date">March 19, 2021 9:25:32 am</div>
     </header>
 
+    <section></section>
+
+    <footer>
+      <h3>Copyright</h3>
+      <div>This is a website for education proposal only.</div>
+    </footer>
+
     <script src="index.js"></script>
   </body>
 </html>
