Add contact section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
 
     <section></section>
 
+    <section id="contact" class="hidden">
+      <h2>Contact information</h2>
+      <p>
+        Do you have any questions, or do you just want to say "Hello"? <br />
+        You can reach out to us!
+      </p>
+      <ul>
+        <li>Our e-mail: mail@mail.com</li>
+        <li>Our phone number: 012345678922</li>
+        <li>Our address: Streetname 22, 84503 City, Country</li>
+      </ul>
+    </section>
+
     <footer>
       <h3>Copyright</h3>
       <div>This is a website for education proposal only.</div>
