Add bookForm section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 
     <section></section>
 
+    <section id="bookForm" class="hidden">
+      <h2>Add a new book</h2>
+      <form id="form">
+        <input type="text" id="title" placeholder="Title" />
+        <input type="text" id="author" placeholder="Author" />
+        <button type="button" id="addButton">Add</button>
+      </form>
+    </section>
+
     <section id="contact" class="hidden">
       <h2>Contact information</h2>
       <p>
