Add bookList section and its styles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       <div class="date">March 19, 2021 9:25:32 am</div>
     </header>
 
-    <section></section>
+    <section id="bookList">
+      <h2>All awesome books</h2>
+      <ul class="bookList"></ul>
+    </section>
 
     <section id="bookForm" class="hidden">
       <h2>Add a new book</h2>
