Add book template

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
       <div>This is a website for education proposal only.</div>
     </footer>
 
-    <script src="index.js"></script>
+    <!-- BOOK TEMPLATE (hidden) -->
+    <ul class="hidden">
+      <li class="book">
+        <p id="title-author"></p>
+        <button type="button">Remove</button>
+      </li>
+    </ul>
+
+    <script src="index.js" type="module"></script>
   </body>
 </html>
